<resources>
    <string name="app_name">NombreDeTuApp</string>
    <string name="form_title">Publicar Proyecto de Gestión del Espacio Público</string>
    <string name="project_name">Nombre del Proyecto</string>
    <string name="project_name_hint">Ingrese el nombre del proyecto</string>
    <string name="locality_label">Localidad</string>
    <string name="project_description">Descripción del Proyecto</string>
    <string name="project_description_hint">Describa los detalles del proyecto</string>
    <string name="publish_button">Publicar</string>
    <string-array name="localities_array">
        <item>Localidad 1</item>
        <item>Localidad 2</item>
        <item>Localidad 3</item>
    </string-array>
</resources>