<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/form_title"
        android:layout_width="385dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/form_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/project_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        app:layout_constraintTop_toBottomOf="@id/form_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/project_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/project_name_hint"
        app:layout_constraintTop_toBottomOf="@id/project_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/locality_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locality_label"
        app:layout_constraintTop_toBottomOf="@id/project_name_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/locality_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/localities_array"
        app:layout_constraintTop_toBottomOf="@id/locality_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_description"
        app:layout_constraintTop_toBottomOf="@id/locality_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/project_description_hint"
        android:gravity="top"
        android:minHeight="120dp"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
